tests/snapshot/error/parser/unterminated_template_literal.exp
SyntaxError: Unterminated template literal
  ┌ parser/unterminated_template_literal.js:1:2
  |
1 | `
  |  ^